fixed layout issues

--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
 </head>
 <body>
 
-
-    <div class="title">
-        <h1>Tap Music</h1>
-        <h2>Touch the colors to make sound</h2>
+    <div class="tap-music">
+        <div class="title">
+            <h1>Tap Music</h1>
+            <h2>Touch the colors to make sound</h2>
+        </div>
+        <div class="container">
+            <div class="sound1 sound"></div>
+            <div class="sound2 sound"></div>
+            <div class="sound3 sound"></div>
+            <div class="sound4 sound"></div>
+            <div class="sound5 sound"></div>
+            <div class="sound6 sound"></div>
+            <div class="sound7 sound"></div>
+            <div class="sound8 sound"></div>
+        </div>
     </div>
-    <div class="container">
-        <div class="sound1 sound"></div>
-        <div class="sound2 sound"></div>
-        <div class="sound3 sound"></div>
-        <div class="sound4 sound"></div>
-        <div class="sound5 sound"></div>
-        <div class="sound6 sound"></div>
-        <div class="sound7 sound"></div>
-        <div class="sound8 sound"></div>
+    <div class="developer">
+        <p>Created by Simo Edwin</p>
     </div>
-
 
 
     <img src="./svg/circle.svg" class="circle" alt="svg">
